syntax = "proto3";

package mu.micro.ci.srv.user;

service User {
	rpc Call(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
	rpc QueryUserByName (Request) returns (Response) {}
}


message Message {
	string say = 1;
}

message Request {
	string userID = 1;
    string userName = 2;
    string userPwd = 3;
	string name = 4;
}

message Response {
	int64 id = 1;
    string name = 2;
    string pwd = 3;
    uint64 createdTime = 4;
    uint64 updatedTime = 5;
	string msg = 6;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
